# twitter_bot_detection

./: .gitignore  README.md  bert.py  lstm.py  pyproject.toml
twitter_bot/: io.py  model.py  tokenizer.py
